--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "rm -rf dist || true; parcel src/index.html --out-dir dist --cache-dir .cache --open; # react-scripts start;",
     "stop": "killall node",
     "build": "rm -rf dist || true; parcel build src/index.html --out-dir dist --cache-dir .cache --no-source-maps; # react-scripts build;",
-    "test": "npm run start & jest --passWithNoTests; # CI=true react-scripts test;",
     "lint": "eslint src/*.js src/**/*.js --max-warnings=0",
     "fix": "eslint --fix src/*.js src/**/*.js --max-warnings=0",
     "reminder": "echo; echo 'Reminders: \n\nDid you do \\033[1;34mnpm run build\\033[0m first? \nDo you need to \\033[1;34m[skip ci]\\033[0m? \n\\033[1;34mControl+C\\033[0m and \\033[1;34mnpm run stop\\033[0m to stop the \"start\" script.'; echo;",
@@ -23,18 +22,6 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.18.3",
-    "husky": "^3.0.9",
-    "jest-cli": "^24.9.0",
-    "parcel-bundler": "^1.12.4",
-    "react-scripts": "^3.4.0"
-  },
-  "jest": {
-    "testPathIgnorePatterns": []
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run reminder; if (npm run fix && npm test); then npm run reminder; else (npm run reminder && exit 1); fi;"
-    }
+    "parcel-bundler": "^1.12.4"
   }
 }
