--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "author": "hchiam",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "drag-on-drop": "^3.3.2",
+    "dragon-drop": "^1.0.6"
+  },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
